--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
   assets:
     - assets/fonts/
     - assets/images/avatars/
+    - assets/images/plan_overview/
+    - assets/images/recipes/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
