--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   dio: ^5.7.0
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
   flutter_test:
